Editting HTML text

--- a/index.html
+++ b/index.html
@@ -11,37 +11,24 @@
     <h1>The Legend of Gilles Villeneuve</h1>
     <section class="lead">
       <h2>Introduction</h2>
-      <p>Gilles Villeneuve started his career in snowmobile racing, winning the 1974 World Championship Snowmobile Derby,
-        and then moved into single seaters, winning the US and Canadian Formula Atlantic championships in 1976, before
-        being offered a drive in Formula One with the McLaren team at the 1977 British Grand Prix. He was taken on by
-        reigning world champions Ferrari for the end of the season and drove for the Italian team from 1978 until 1982. He
+      <p>Gilles Villeneuve started in snowmobile racing, winning the 1974 World Championship Snowmobile Derby, and then moved into single seaters, winning the US and Canadian Formula Atlantic championships in 1976, before  being offered a drive in Formula One with the McLaren team at the 1977 British Grand Prix.</p>
+        <p>He was taken on by Ferrari for the end of the season and drove for the Italian team from 1978 until 1982. He
         won six Grand Prix races in a short career at the highest level. In 1979, he finished second in the championship
         to teammate Jody Scheckter.</p>
     </section>
-  
-    <h2>Early Impressions</h2>
-    <p>After Villeneuve impressed James Hunt by beating him and several other Grand Prix stars in a non-championship
-      Formula Atlantic race in 1976, Hunt's McLaren team offered Villeneuve a Formula One deal for up to five races in a
-      third car during the 1977 season. Villeneuve made his debut at the 1977 British Grand Prix, where he qualified 9th
-      in McLaren's old M23, separating the regular drivers Hunt and Jochen Mass who were driving newer M26s. In the race
-      he set fifth fastest lap and finished 11th after being delayed for two laps by a faulty temperature gauge. The
-      British press coverage of Villeneuve's performance was generally complimentary. </p>
-    <em><strong>
-        <center>"Anyone seeking a future World Champion need look no further than this quietly assured young man."
-      </strong><br> - John Blunsden, commenting in The Times</center></em><br>
-    <p>Despite this McLaren decided not to continue with Villeneuve for the following year and he was left with no solid
-      options for 1978, Rumours circulated that Villeneuve was one of several drivers in whom Ferrari's team was
-      interested, and in August 1977 he flew to Italy to meet Enzo Ferrari, who was immediately reminded of Tazio
-      Nuvolari, the pre-war European champion. </p>
-    <em><strong>
-        <center>"When they presented me with this 'piccolo Canadese', this minuscule bundle of nerves, I immediately
-          recognised in him the physique of Nuvolari and said to myself, let's give him a try."
-      </strong><br> - Enzo Ferrari</center></em><br>
-    <p>Ferrari was satisfied with Villeneuve's promise after a session at Ferrari's Fiorano test track and signed him to
-      drive for Ferrari in the last two races of 1977, as well as the full 1978 season.</p>
-    <em><strong>
-        <center>"If someone said to me that you can have three wishes, my first would have been to get into racing, my
-          second to be in Formula 1, my third to drive for Ferrari."
+    <section class="main-1">
+      <h2>Early Impressions</h2>
+      <p>After Villeneuve impressed James Hunt by beating him and several others in a Formula Atlantic race in 1976, Hunt's McLaren team offered Villeneuve a Formula One deal for up to five races in a third car during 1977. Villeneuve made his debut at the 1977 British Grand Prix, where he qualified 9th in an old M23, separating the regular drivers Hunt and Jochen Mass who were driving newer M26s. In the race he set fifth fastest lap and finished 11th.</p>
+      <p class="quote">"Anyone seeking a future World Champion need look no further than this quietly assured young man."</p>
+      <p class="author">John Blunsden</p>
+    </section>
+    
+      
+    <p>McLaren decided not to continue with Villeneuve for 1978 but rumours circulated that Villeneuve was of interest to Ferrari. Enzo Ferrari, after meeting Gilles, was immediately reminded of Tazio Nuvolari, the pre-war European champion. </p>
+    <p class="quote">"When they presented me with this 'piccolo Canadese', this minuscule bundle of nerves, I immediately recognised in him the physique of Nuvolari and said to myself, let's give him a try."</p>
+    <p class="author">Enzo Ferrari</p> </center></em><br>
+    <p class="quote">"If someone said to me that you can have three wishes, my first would have been to get into racing, my second to be in Formula 1, my third to drive for Ferrari."</p>
+        <center>
       </strong><br> - Gilles Villeneuve</center></em>
     <h2>Ferrari</h2>
     <h3>1978</h3>
