--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/png" href="images/billy.png">
   <link rel="stylesheet" href="style.css">
   <scrip src="script.js" defer></scrip>
-  <title>A Tribute - Gilles Villeuve</title>
+  <title>A Tribute - Gilles Villeneuve</title>
 </head>
 <body>
   <div class="bg-image" id="bg-image"></div>
@@ -51,6 +51,7 @@
     </section>
     
     <section class="bg-d">
+      <h2>"Eleven seconds!!!</h2>
       <p>At the Dutch Grand Prix a slow puncture collapsed Villeneuve's left rear tyre and put him off the track. He returned to the circuit and limped back to the pit lane on three wheels, losing the damaged wheel on the way. On his return to the pit lane Villeneuve insisted that the team replace the missing wheel, and had to be persuaded that the car was beyond repair.</p>
       <p>Villeneuve might have won the World Championship by ignoring team orders to beat Scheckter at the Italian Grand Prix, but chose to finish behind him, ending his own championship challenge. The pair finished first and second in the championship, with Scheckter beating Villeneuve by just four points.</p>
       <p>If Gilles' legend was ever in doubt one of the most memorable moments in Formula 1 history happened at the season-ending United States Grand Prix. During the extremely wet Friday practice session Villeneuve set a time variously reported to be either 9 or 11 seconds faster than any other driver.</p>
