Noticed a small but big error. Corrected. Reviewed project and it is finally done. I think!

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <title>A Tribute - Gilles Villeneuve</title>
 </head>
 <body>
-  <div class="bg-image" id="bg-image"></div>0
+
+  <div class="bg-image" id="bg-image"></div>
 
   <main class="container">
 
@@ -45,7 +46,7 @@
       <p>Early in the season, he started on the front row at the United States West Grand Prix at Long Beach and finished second on the road at the Italian Grand Prix. He ran second at the United States Grand Prix before his engine failed and at the season-ending Canadian Grand Prix Villeneuve scored his first win. To date, he remains the only Canadian to win the Canadian Grand Prix.</p>
       <h3>1979</h3>
       <p>Villeneuve was joined by Jody Scheckter in 1979 after Carlos Reutemann moved to Lotus. Villeneuve won three races during the year and briefly led the championship after winning back to back races in Long Beach and Kyalami. However, the season is mostly remembered for Villeneuve's intense wheel-banging duel with René Arnoux in the last laps of the 1979 French Grand Prix, managing to hold him off to secure second place. </p>
-      <p class="quote">I tell you, that was really fun! I thought for sure we were going to get on our heads, you know, because when you start interlocking wheels it's very easy for one car to climb over another."</p>   
+      <p class="quote">"I tell you, that was really fun! I thought for sure we were going to get on our heads, you know, because when you start interlocking wheels it's very easy for one car to climb over another."</p>   
       <p class="author">Gilles Villeneuve</p>
     </section>
     
@@ -91,5 +92,6 @@
     </section>
   
   </main>
+
 </body>
 </html>
